--- a/style.css
+++ b/style.css
@@ -1380,6 +1380,7 @@ article footer a:hover {
 @media (max-width: 1252px) {
 
 	.site-search {
+		padding-right: 2rem;
 		right: 0;
 	}
 
@@ -1405,11 +1406,6 @@ article footer a:hover {
 }
 
 @media (max-width: 1250px) {
-
-	.site-search ul {
-		padding-left: 2rem;
-		padding-right: 2rem;
-	}
 
 	#jacket .global-bar a.global-home {
 		padding-right: 2rem;
